--- a/week2/blog.html
+++ b/week2/blog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Blog</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
     <header id="PageHeader">
@@ -23,6 +24,10 @@
           <time class="BlogPostDate" pubdate="pubdate">2018-02-10</time>
         </header>
         <div class="BlogPostContent">
+          <p class="warning">This text will be displayed in bold.</p>
+          <p>This text will NOT be displayed in bold.</p>
+          <p id="first-para">This paragraph will be bold-faced</p>
+          <p>This will not be bold</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </article>
